--- a/package.json
+++ b/package.json
@@ -68,7 +68,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "express-validation": "^3.0.6",
     "http-status-codes": "^2.1.4",
+    "joi": "^17.3.0",
     "lodash": "^4.17.20",
     "pg": "^8.5.1",
     "pino": "^6.11.0",
