--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@0x/tslint-config": "^4.1.3",
     "@0x/typescript-typings": "^5.1.6",
     "@types/cors": "^2.8.9",
+    "@types/crypto-js": "^4.0.1",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
     "@types/lodash": "^4.14.168",
@@ -63,9 +64,11 @@
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.0.0",
     "debug": "^4.3.1",
     "delay": "^4.4.0",
     "dotenv": "^8.2.0",
+    "ethers": "^5.0.27",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "express-validation": "^3.0.6",
