remove unused modules/schemas add graphql

--- a/package.json
+++ b/package.json
@@ -75,8 +75,12 @@
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "express-validation": "^3.0.6",
+    "graphql": "^15.5.0",
+    "graphql-request": "^3.4.0",
+    "graphql-tag": "^2.12.4",
     "http-status-codes": "^2.1.4",
     "joi": "^17.3.0",
+    "jose": "2",
     "lodash": "^4.17.20",
     "pg": "^8.5.1",
     "pino": "^6.11.0",
