remove refreshToken, implement createGame/updateGame handlers

--- a/.env_example
+++ b/.env_example
@@ -8,7 +8,7 @@ EXCHANGE_CONTRACT_BLOCK=
 HTTP_PORT=
 HASURA_ENDPOINT=
 HASURA_GRAPHQL_ADMIN_SECRET=
-JWT_KEY=
+JWT_SECRET=
 JWT_ALGORITHM='HS256'
 
 ## Hasura claims namespace
@@ -16,10 +16,6 @@ JWT_ALGORITHM='HS256'
 
 ## JWT expiration period, in minutes
 # JWT_EXPIRES_IN=15
-
-## JWT refresh token expiration period, in minutes
-# JWT_REFRESH_EXPIRES_IN=43200
-
 
 ################### Limiter options ###################
 # MAX_REQUESTS=100
